fix: custom error response to all api
